[package]
name = "serial-monitor"
description = "Simple Arduino Serial Monitor"
authors = ["Robin Schroer"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial-unix = "0.4"
serial-core = "0.4"
clap = {version = "3.1", features = ["derive"]}
